--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
+<!DOCTYPE html>
 <html>
-	<head>Geek Tricks</head>
-	<body bgcolor="cyan">
-		<p>This is my first live web site.I will be sharing a few tricks here for geeks like me interested in ethical hacking.
+	<head>
+		<title>
+			Geek Tricks
+		</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<p>This is my <strong>first live web site</strong>.I will be sharing a few tricks here for geeks like me interested in ethical hacking.
 		</p>
 	</body>
 </html>
