--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
+		<h1>Greek Trickeries</h1>
 		<p>This is my <strong>first live web site</strong>.I will be sharing a few tricks here for geeks like me interested in ethical hacking.
 		</p>
 	</body>
