--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	</head>
 	<body>
 		<h1>Greek Trickeries</h1>
-		<img src="img/hack.jpg" alt="A geek"></img>
+		<img src="img/hack.jpg" style="width:50px;height:50px;" alt="A geek"></img>
 		<p>This is my <strong>first live web site</strong>.I will be sharing a few tricks here for geeks like me interested in ethical hacking.
 		</p>
+		<h2>Founder</h2>
+		<img src="https://en.gravatar.com/userimage/190067286/b61e2042827c7c5ba3d1573af0ba95d5.jpeg?s=150" alt="Harsh Mishra">
 	</body>
 </html>
