--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+		body {
+ 			 background-image: img/bg.jpg;
+		}
+		</style>
 		<title>
 			Geek Tricks
 		</title>
