--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style>
-		body {
- 			 background-image: img/bg.jpg;
-		}
-		</style>
 		<title>
 			Geek Tricks
 		</title>
 		<meta charset="utf-8">
 	</head>
-	<body>
+	<body background="img/bg.jpg">
 		<h1>Greek Trickeries</h1>
 		<img src="img/hack.jpg" style="width:50px;height:50px;" alt="A geek"></img>
 		<p>This is my <strong>first live web site</strong>.I will be sharing a few tricks here for geeks like me interested in ethical hacking.
