--- a/index.html
+++ b/index.html
@@ -21,16 +21,26 @@
                 <nav>
                     <ul>
                         <li class="current"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="serv.html">Services</a></li>
+                        <li><a href="#abtme">About</a></li>
+                        <li><a href="#serv">Services</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
+        <!-- Load font awesome icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <!-- The social media icon bar -->
+        <div class="icon-bar">
+            <a href="https://www.facebook.com/harshmishra030401" class="facebook"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+            <a href="#" class="google"><i class="fa fa-google"></i></a>
+            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+        </div>
         <section id="showcase">
             <div class="container">
                 <h1>A Geek's Guide To Pentest</h1>
-                <p>Pentesting, also known as penetration testing, is a securityassessment, an analysis, and progression of simulated attacks on anapplication (web, mobile, or API) or network to check its securityposture.</p>
+                <p><strong>Pentesting</strong>, also known as penetration testing, is a security assessment, an analysis, and progression of simulated attacks on anapplication (web, mobile, or API) or network to check its security posture.</p>
             </div>
         </section>
         <section id="newsletter">
@@ -44,6 +54,7 @@
         </section>
         <section id="boxes">
             <div class="container">
+                <h1 id="serv" style="text-align:center;font-size: 30px;font-weight: 700;font-family: Georgia, 'Times New Roman', Times, serif;">Our Services</h1>
                 <div class="box">
                     <img src="img/recon.png" style="width: 30%">
                     <h1>Recon</h1>
@@ -59,6 +70,13 @@
                     <h1>Exploit</h1>
                     <p>An exploit is an attack on a computer system, especially one that takes advantage of a particular vulnerability the system offers to intruders.</p>
                 </div>
+            </div>
+        </section>
+        <section id="abt">
+            <div class="cont">
+                <h1 id="abtme">About Me</h1>
+                <p>I am a <span style="color: orange;">script-kiddie</span> who is on his way to become a great ethical hacker a day.</p>
+                <p>Do join me in this journey!!!</p>
             </div>
         </section>
         <footer>
